k8s/shutter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olive-young-shutter-deployment
  namespace: spring-server
  labels:
    app: olive-young-shutter
spec:
  replicas: 15  # 초기 파드 수
  selector:
    matchLabels:
      app: olive-young-shutter
  template:
    metadata:
      labels:
        app: olive-young-shutter
    spec:
      containers:
        - name: olive-young-shutter-container
          image: ${IMAGE_URL/IMGAE_NAME:IMAGE_TAG}
          resources: # 리소스 요청 및 제한 설정
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1024m"
              memory: "1024Mi"
          ports:
            - containerPort: 8085
