k8s/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olive-young-main-service
  namespace: spring-server
  labels:
    app: olive-young-main
spec:
  type: ClusterIP
  selector:
    app: olive-young-main
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
