k8s/shutter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olive-young-shutter-service
  namespace: spring-server
  labels:
    app: olive-young-shutter
spec:
  type: ClusterIP
  selector:
    app: olive-young-shutter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
